--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -3,20 +3,17 @@ name: On Push Run
 on: push
 
 env:
-  DEVOPS_DIR: run-script-github-actions
+  DAY_OF_WEEK: run-script-github-actions
 
 jobs:
   hello-world:
-    name: Hello world
     runs-on: ubuntu-latest
+    env:
+      Greeting: Hello
     steps:
-    - name: Check-out devops repository
-      uses: actions/checkout@main
-      with:
-        repository:  Mademoisellefou/run-script-github-actions
-        token: ${{ secrets.GITHUB_TOKEN }}
-        path: ${{ env.DEVOPS_DIR }}
-
-    - name: Hello World
-      run: python ${{ env.DEVOPS_DIR }}/main.py
-      shell: sh
+      - name: Say Hello
+      - uses: actions/checkout@env_var
+        if: ${{ env.DAY_OF_WEEK == 'Monday' }}
+        run: echo "$Greeting $Name_User ,do epic shit"
+        env:
+          Name_User: Lib
