--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Say Hello
       - uses: actions/checkout@env_var
         if: ${{ env.DAY_OF_WEEK == 'Monday' }}
-        run: echo "$Greeting $Name_User ,do epic shit"
+      - run: echo "$Greeting $Name_User ,do epic shit"
         env:
           Name_User: Lib
