--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -3,17 +3,16 @@ name: On Push Run
 on: push
 
 env:
-  DAY_OF_WEEK: run-script-github-actions
+  DAY_OF_WEEK: Monday
 
 jobs:
-  hello-world:
+  greeting_job:
     runs-on: ubuntu-latest
     env:
       Greeting: Hello
     steps:
-      - name: Say Hello
-      - uses: actions/checkout@env_var
+      - name: "Say Hello Mona it's Monday"
         if: ${{ env.DAY_OF_WEEK == 'Monday' }}
-      - run: echo "$Greeting $Name_User ,do epic shit"
+        run: echo "$Greeting $First_Name. Today is $DAY_OF_WEEK!" && cat /etc/os-release | ip a
         env:
-          Name_User: Lib
+          First_Name: Mona
